--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,6 @@ spring.datasource.password=kopyto
 
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+server.port=8090
+
