--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
@@ -14,4 +14,7 @@ spring.datasource.password=kopyto
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=8090
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.mvc.converters.preferred-json-mapper=gson
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
