--- a/build.gradle
+++ b/build.gradle
@@ -25,22 +25,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-jersey'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.1.RELEASE'
+    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.session:spring-session-jdbc'
-    implementation 'com.auth0:java-jwt:3.19.1'
-    implementation 'junit:junit:4.13.1'
+    implementation 'com.auth0:java-jwt:3.19.2'
+    implementation 'junit:junit:4.13.2'
     implementation 'junit:junit:4.13.1'
     compileOnly 'org.projectlombok:lombok'
+    implementation 'org.postgresql:postgresql'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
     testImplementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.7.3'
 
 
