--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
+spring.datasource.driverClassName = org.postgresql.Driver
 spring.sql.init.platform=postgres
 spring.session.store-type=jdbc
 spring.session.jdbc.initialize-schema=always
@@ -10,7 +10,7 @@ spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-pos
 spring.session.jdbc.table-name=SPRING_SESSION
 spring.datasource.url=jdbc:postgresql://localhost:5432/sumo
 spring.datasource.username=postgres
-spring.datasource.password=password
+spring.datasource.password=kopyto
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=8090
