--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driverClassName = org.postgresql.Driver
@@ -10,11 +10,15 @@ spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-pos
 spring.session.jdbc.table-name=SPRING_SESSION
 spring.datasource.url=jdbc:postgresql://localhost:5432/sumo
 spring.datasource.username=postgres
-spring.datasource.password=kopyto
+spring.datasource.password=password
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 server.port=8090
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.mvc.converters.preferred-json-mapper=gson
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 
