--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.session:spring-session-jdbc'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
+    implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.8'
     implementation 'com.auth0:java-jwt:3.19.2'
     implementation 'junit:junit:4.13.2'
     implementation 'junit:junit:4.13.1'
